--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
 
 <script src="js/app.js"></script>
 <script src="js/controller/studentInfoController.js"></script>
+<script src="js/filter/highlight.js"></script>
+<script src="js/service/view.js"></script>
+
 </body>
 </html>
