--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="js/controller/studentInfoController.js"></script>
 <script src="js/filter/highlight.js"></script>
 <script src="js/service/view.js"></script>
+<script src="js/directive/stuTable.js"></script>
 
 </body>
 </html>
