--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 <script src="js/filter/highlight.js"></script>
 <script src="js/service/view.js"></script>
 <script src="js/directive/stuTable.js"></script>
+<script src="js/directive/stuList.js"></script>
+
 
 </body>
 </html>
